--- a/env.yaml.sample
+++ b/env.yaml.sample
@@ -3,3 +3,7 @@ FIREBASE_ADMIN_CREDENTIALS:
 PROJECT_ID:
 BIGQUERY_LOCATION:
 BIGQUERY_DATASET:
+BINANCE_API_KEY:
+BINANCE_API_KEY_SECRET:
+ALPACA_API_KEY:
+ALPACA_API_KEY_SECRET:
