--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,11 +17,12 @@ packages = [{ include = "cryptotick" }]
 python = ">=3.7.1"
 httpx = "^0.16.1"
 ciso8601 = "^2.1.3"
+"yapic.json" = "^1.6.0"
 firebase-admin = "^4.5.0"
 pandas = "^1.2.0"
 pyarrow = "^2.0.0"
 google-cloud-pubsub = "^2.2.0"
-google-cloud-bigquery = {extras = ["pyarrow"], version = "^2.6.1"}
+google-cloud-bigquery = {version = "^2.6.1"}
 google-cloud-bigquery-storage = "^2.1.0"
 
 
